--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   photo_manager: ^3.1.1
   path: ^1.9.0
   permission_handler: ^11.3.1
-
+  google_mlkit_image_labeling: ^0.12.0
+  image_picker: ^1.1.2
+  google_mlkit_commons: ^0.7.1
+  path_provider: ^2.1.3
+  camera: ^0.11.0+1
+  google_mlkit_object_detection: ^0.13.0
+  google_mlkit_selfie_segmentation: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
