--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   camera: ^0.11.0+1
   google_mlkit_object_detection: ^0.13.0
   google_mlkit_selfie_segmentation: ^0.8.0
+  google_mlkit_face_detection: ^0.11.0
+  google_mlkit_pose_detection: ^0.12.0
+  google_mlkit_digital_ink_recognition: ^0.12.0
+  google_mlkit_text_recognition: ^0.13.0
+  google_mlkit_document_scanner: ^0.2.0
+  flutter_riverpod: ^2.5.1
+  flutter_pdfview: ^1.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
