--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   photo_manager: ^3.1.1
   path: ^1.9.0
   permission_handler: ^11.3.1
-  google_mlkit_image_labeling: ^0.12.0
   image_picker: ^1.1.2
-  google_mlkit_commons: ^0.7.1
   path_provider: ^2.1.3
+  sqflite: ^2.3.3+1
+
   camera: ^0.11.0+1
+  google_mlkit_commons: ^0.7.1
+  google_mlkit_image_labeling: ^0.12.0
   google_mlkit_object_detection: ^0.13.0
   google_mlkit_selfie_segmentation: ^0.8.0
   google_mlkit_face_detection: ^0.11.0
@@ -64,7 +66,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -76,6 +78,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/ml/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
