--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,17 +41,27 @@ dependencies:
   sqflite: ^2.3.3+1
 
   camera: ^0.11.0+1
-  google_mlkit_commons: ^0.7.1
+#  google_mlkit_commons: ^0.7.1
   google_mlkit_image_labeling: ^0.12.0
-  google_mlkit_object_detection: ^0.13.0
-  google_mlkit_selfie_segmentation: ^0.8.0
-  google_mlkit_face_detection: ^0.11.0
-  google_mlkit_pose_detection: ^0.12.0
-  google_mlkit_digital_ink_recognition: ^0.12.0
-  google_mlkit_text_recognition: ^0.13.0
-  google_mlkit_document_scanner: ^0.2.0
+#  google_ml_kit: ^0.18.0
+#  google_mlkit_barcode_scanning: ^0.12.0
+
+  geolocator: ^12.0.0
+  geocoding: ^3.0.0
+  qr_flutter: ^4.1.0
+
+#  google_mlkit_object_detection: ^0.13.0
+#  google_mlkit_selfie_segmentation: ^0.8.0
+#  google_mlkit_face_detection: ^0.11.0
+#  google_mlkit_pose_detection: ^0.12.0
+#  google_mlkit_digital_ink_recognition: ^0.12.0
+#  google_mlkit_text_recognition: ^0.13.0
+#  google_mlkit_document_scanner: ^0.2.0
   flutter_riverpod: ^2.5.1
   flutter_pdfview: ^1.3.2
+
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -78,9 +88,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-    - assets/ml/
-    - assets/images/
+#  assets:
+#    - assets/ml/
+#    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
